<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel"
                  type="com.enkhee.codingchallenge.ui.image.ImageViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.image.ImageActivity">
        <androidx.constraintlayout.widget.Group
                android:id="@+id/group_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:constraint_referenced_ids="progressBar_loading, tv_loading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:mutableVisibility="@{viewModel.getLoadingVisibility()}"/>

        <ProgressBar
                android:id="@+id/progressBar_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:indeterminate="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:translationZ="2dp"
                android:elevation="2dp"/>

        <TextView
                android:id="@+id/tv_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:translationZ="2dp"
                android:elevation="2dp"
                android:text="@string/tv_loading"
                android:textAppearance='@style/TextAppearance.MaterialComponents.Caption'
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar_loading"
                app:layout_constraintVertical_bias="0.0"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4"/>
        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.03"/>


        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.97"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:focusable="true"
                android:transitionName="imageTransition"
                android:focusableInTouchMode="true"
                app:imageUrl="@{viewModel.image.link}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
                android:contentDescription="@string/big_image"/>
        <EditText
                android:id="@+id/et_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/comment_hint"
                android:autofillHints="@string/comment_hint"
                android:text="@={viewModel.comment}"
                android:maxLines="3"
                android:inputType="textCapWords|textCapSentences"
                app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal"
                app:layout_constraintStart_toStartOf="@+id/gl_left"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
                tools:ignore="UnusedAttribute"
                android:layout_marginTop="@dimen/margin_comment"
                android:layout_marginBottom="@dimen/margin_comment"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/et_comment"
                app:layout_constraintStart_toEndOf="@id/et_comment"
                app:layout_constraintBottom_toBottomOf="@id/et_comment"
                app:layout_constraintEnd_toStartOf="@+id/gl_right"
                android:onClick="@{()->viewModel.onClickSubmit()}"
                android:text="@string/button_submit"/>

        <TextView
                android:id="@+id/tv_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_comments"
                android:textAppearance='@style/TextAppearance.MaterialComponents.Headline6'
                app:layout_constraintTop_toBottomOf="@id/et_comment"
                app:layout_constraintStart_toEndOf="@+id/gl_left"
                android:layout_marginTop="@dimen/margin_comment_header"
                android:layout_marginBottom="@dimen/margin_comment_header"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance='@style/TextAppearance.MaterialComponents.Headline6'
                tools:text="No Comments"
                android:alpha="@dimen/messageTransparency"
                android:text="@{viewModel.message}"
                app:layout_constraintTop_toBottomOf="@id/tv_comments"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gl_left"
                app:layout_constraintEnd_toStartOf="@id/gl_right"/>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/tv_comments"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/gl_left"
                app:layout_constraintEnd_toStartOf="@id/gl_right"
                app:listAdapter="@{viewModel.adapter}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
